--- a/index.html
+++ b/index.html
@@ -13,7 +13,33 @@
 </head>
 
 <body>
+    <header>
+        <div class="banner">
+            <img class="image" src="/assets/Group.png" alt="">
+            <h2 class="heading">
+                "In the near future, I hope to become a Developer."
+            </h2>
+            <p class="description">
+                Web development is about building and maintaining websites. It uses languages like HTML, CSS, and
+                JavaScript for designing pages and managing functions.
+            </p>
 
+            <div class="button">
+                <button class="btn">Contact with me</button>
+            </div>
+        </div>
+
+    </header>
+
+    <main>
+
+        
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
