cheked Uppercase letter in image and corrected it

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="banner">
-            <img class="image" src="/assets/Group.png" alt="">
+            <img class="image" src="/assets/group.png" alt="">
             <h2 class="heading">
                 "In the near future, I hope to become a Developer."
             </h2>
@@ -33,7 +33,7 @@
 
     <main>
 
-        
+
 
     </main>
 
