img not showing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,48 @@
     </header>
 
     <main>
-
+        <section class="why">
+            <div class="section_heading">
+                <h2 class="section_title">Why Web Development??</h2>
+                <p class="section_des"> Choose web development for creativity, job demand, problem-solving, continuous learning, and the opportunity to impact the digital world.</p>
+            </div>
+            <div class="content_des">
+                <div class="text_des">
+                 <h2 class="text_title">I will Do Coding and Change The World</h2>
+                 <p class="text_subtitle">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
+                 <div>
+                    <button>Learn More</button>
+                 </div>
+                </div>
+                <div class="img_des">
+                    <img src="/assets/layer.png" alt="">
+                </div>
+            </div>
+            <div class="content_des">
+                <div class="text_des">
+                    <h2 class="text_title">I will help People by creating Modern Web System</h2>
+                    <p class="text_subtitle">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
+                    <div>
+                       <button>Learn More</button>
+                    </div>
+                   </div>
+                <div class="img_des">
+                    <img src="/assets/lalmia.png" alt="">
+                </div>
+            </div>
+            <div class="content_des">
+                <div class="text_des">
+                    <h2 class="text_title">I will Do Coding and Change The World</h2>
+                    <p class="text_subtitle">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
+                    <div>
+                       <button>Learn More</button>
+                    </div>
+                   </div>
+                <div class="img_des">
+                    <img src="/assets/komola.png" alt="">
+                </div>
+            </div>
+        </section>
 
 
     </main>
