--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                  </div>
                 </div>
                 <div class="img_des">
-                    <img src="/assets/layer.png" alt="">
+                    <img src="./assets/layer.png" alt="">
                 </div>
             </div>
             <div class="content_des">
@@ -58,7 +58,7 @@
                     </div>
                    </div>
                 <div class="img_des">
-                    <img src="/assets/lalmia.png" alt="">
+                    <img src="./assets/lalmia.png" alt="">
                 </div>
             </div>
             <div class="content_des">
@@ -70,7 +70,7 @@
                     </div>
                    </div>
                 <div class="img_des">
-                    <img src="/assets/komola.png" alt="">
+                    <img src="./assets/komola.png" alt="">
                 </div>
             </div>
         </section>
