--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
     <main>
         <section class="why">
             <div class="section_heading">
-                <h2 class="section_title">Why Web Development??</h2>
-                <p class="section_des"> Choose web development for creativity, job demand, problem-solving, continuous learning, and the opportunity to impact the digital world.</p>
+                <h2 class="section_title center">Why Web Development??</h2>
+                <p class="description center"> Choose web development for creativity, job demand, problem-solving, continuous learning, and the opportunity to impact the digital world.</p>
             </div>
             <div class="content_des">
                 <div class="text_des">
                  <h2 class="text_title">I will Do Coding and Change The World</h2>
-                 <p class="text_subtitle">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
-                 <div>
-                    <button>Learn More</button>
+                 <p class="description left">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
+                 <div class="left">
+                    <button class="why_button">Learn More</button>
                  </div>
                 </div>
                 <div class="img_des">
                     <img src="./assets/layer.png" alt="">
                 </div>
             </div>
-            <div class="content_des">
+            <div class="content_reverse">
                 <div class="text_des">
                     <h2 class="text_title">I will help People by creating Modern Web System</h2>
-                    <p class="text_subtitle">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
-                    <div>
-                       <button>Learn More</button>
+                    <p class="description left">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
+                    <div class="left">
+                       <button class="why_button">Learn More</button>
                     </div>
                    </div>
                 <div class="img_des">
@@ -64,9 +64,9 @@
             <div class="content_des">
                 <div class="text_des">
                     <h2 class="text_title">I will Do Coding and Change The World</h2>
-                    <p class="text_subtitle">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
-                    <div>
-                       <button>Learn More</button>
+                    <p class="description left">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
+                    <div class="left">
+                       <button class="why_button">Learn More</button>
                     </div>
                    </div>
                 <div class="img_des">
