--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
                 </div>
             </div>
         </section>
+        <section class="inspiration center">
+            <h1 class="section_title">My Inspiration</h1>
+            <p class="description">Jhankar Mahbub is a motivational figure, inspiring countless individuals with his passion for coding, education, and innovative thinking.</p>
+            <div class="video">
+                <iframe  width="100%"  height="570px" src="https://www.youtube.com/embed/k3PcVruvZCs?si=ed07IDskrZA4viIp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
 
 
     </main>
