coded the my current target section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,31 @@
             </div>
         </section>
 
+        <section class="tech">
+            <p class="section_title center">My Current Target</p>
+            <p class="description center">Now I know something about HTML and CSS. I want to make my webpages responsive by using something special.CSS is just awesome , It take a website into another level</p>
+            <div class="targets">
+                <div class="target target1">
+                    <img src="../assets/html.png" alt="" class="icon">
+                    <h2 class="target_title">HTML</h2>
+                    <p class="description">HTML forms the backbone of web pages and applications.</p>
+                    <a target="_blank" href="https://www.w3schools.com/html/html_intro.asp" class="anchor">learn More</a>
+                </div>
+                <div class="target target2">
+                    <img src="../assets/css.png" alt="" class="icon">
+                    <h2 class="target_title">CSS</h2>
+                    <p class="description">CSS enhances web pages with visual styles in a interactive way</p>
+                    <a target="_blank" href="https://www.w3schools.com/css/" class="anchor">Learn More</a>
+                </div>
+                <div class="target target3">
+                    <img src="../assets/js.png" alt="" class="icon">
+                    <h2 class="target_title">JavaScript</h2>
+                    <p class="description">JavaScript powers dynamic web pages, enabling interactive features .</p>
+                    <a target="_blank" href="https://www.w3schools.com/js/" class="anchor">Learn More</a>
+                </div>
+            </div>
+        </section>
+
 
     </main>
 
