--- a/index.html
+++ b/index.html
@@ -108,9 +108,30 @@
         </section>
 
 
+        <section class="support">
+            <div class="support_content">
+                <p class="support_title">I need Support</p>
+                <p class="support_sub">I appreciate programming hero community and my instructors for supporting me in the long journey</p>
+                <div class="input">
+                    <label for="feedback">
+                        <input class="feedback" placeholder="Suggest me any feedback for me" type="text">
+                        <input type="submit" class="submit" value="submit">
+                    </label>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
     <footer>
+
+         <p class="foot_title">An Open Commitment by Asadul Alam</p>
+         <div class="figures">
+            <a href="https://www.facebook.com/" target="_blank" ><img class="fig" src="/assets/facebook.png" alt=""></a>
+            <a href="https://github.com/" target="_blank" ><img class="fig" src="/assets/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/home/?originalSubdomain=bd" target="_blank"><img class="fig" src="/assets/linked_in.png" alt=""></a>
+         </div>
 
     </footer>
 </body>
