all main works completed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             </p>
 
             <div class="button">
-                <button class="btn">Contact with me</button>
+                <a id="bottom_page" href="#element_target">
+                    <button class="btn">Contact with me</button>
+                </a>
             </div>
         </div>
 
@@ -35,15 +37,17 @@
         <section class="why">
             <div class="section_heading">
                 <h2 class="section_title center">Why Web Development??</h2>
-                <p class="description center"> Choose web development for creativity, job demand, problem-solving, continuous learning, and the opportunity to impact the digital world.</p>
+                <p class="description center"> Choose web development for creativity, job demand, problem-solving,
+                    continuous learning, and the opportunity to impact the digital world.</p>
             </div>
             <div class="content_des">
                 <div class="text_des">
-                 <h2 class="text_title">I will Do Coding and Change The World</h2>
-                 <p class="description left">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
-                 <div class="left">
-                    <button class="why_button">Learn More</button>
-                 </div>
+                    <h2 class="text_title">I will Do Coding and Change The World</h2>
+                    <p class="description left">I will code to innovate, solve problems, and create solutions that
+                        positively impact and change the world.</p>
+                    <div class="left">
+                        <button class="why_button">Learn More</button>
+                    </div>
                 </div>
                 <div class="img_des">
                     <img src="./assets/layer.png" alt="">
@@ -52,11 +56,12 @@
             <div class="content_reverse">
                 <div class="text_des">
                     <h2 class="text_title">I will help People by creating Modern Web System</h2>
-                    <p class="description left">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
+                    <p class="description left">I will code to innovate, solve problems, and create solutions that
+                        positively impact and change the world.</p>
                     <div class="left">
-                       <button class="why_button">Learn More</button>
+                        <button class="why_button">Learn More</button>
                     </div>
-                   </div>
+                </div>
                 <div class="img_des">
                     <img src="./assets/lalmia.png" alt="">
                 </div>
@@ -64,11 +69,12 @@
             <div class="content_des">
                 <div class="text_des">
                     <h2 class="text_title">I will Do Coding and Change The World</h2>
-                    <p class="description left">I will code to innovate, solve problems, and create solutions that positively impact and change the world.</p>
+                    <p class="description left">I will code to innovate, solve problems, and create solutions that
+                        positively impact and change the world.</p>
                     <div class="left">
-                       <button class="why_button">Learn More</button>
+                        <button class="why_button">Learn More</button>
                     </div>
-                   </div>
+                </div>
                 <div class="img_des">
                     <img src="./assets/komola.png" alt="">
                 </div>
@@ -76,21 +82,27 @@
         </section>
         <section class="inspiration center">
             <h1 class="section_title">My Inspiration</h1>
-            <p class="description">Jhankar Mahbub is a motivational figure, inspiring countless individuals with his passion for coding, education, and innovative thinking.</p>
+            <p class="description">Jhankar Mahbub is a motivational figure, inspiring countless individuals with his
+                passion for coding, education, and innovative thinking.</p>
             <div class="video">
-                <iframe  width="100%"  height="570px" src="https://www.youtube.com/embed/k3PcVruvZCs?si=ed07IDskrZA4viIp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="100%" height="570px" src="https://www.youtube.com/embed/k3PcVruvZCs?si=ed07IDskrZA4viIp"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
 
         <section class="tech">
             <p class="section_title center">My Current Target</p>
-            <p class="description center">Now I know something about HTML and CSS. I want to make my webpages responsive by using something special.CSS is just awesome , It take a website into another level</p>
+            <p class="description center">Now I know something about HTML and CSS. I want to make my webpages responsive
+                by using something special.CSS is just awesome , It take a website into another level</p>
             <div class="targets">
                 <div class="target target1">
                     <img src="../assets/html.png" alt="" class="icon">
                     <h2 class="target_title">HTML</h2>
                     <p class="description">HTML forms the backbone of web pages and applications.</p>
-                    <a target="_blank" href="https://www.w3schools.com/html/html_intro.asp" class="anchor">learn More</a>
+                    <a target="_blank" href="https://www.w3schools.com/html/html_intro.asp" class="anchor">learn
+                        More</a>
                 </div>
                 <div class="target target2">
                     <img src="../assets/css.png" alt="" class="icon">
@@ -111,7 +123,8 @@
         <section class="support">
             <div class="support_content">
                 <p class="support_title">I need Support</p>
-                <p class="support_sub">I appreciate programming hero community and my instructors for supporting me in the long journey</p>
+                <p class="support_sub">I appreciate programming hero community and my instructors for supporting me in
+                    the long journey</p>
                 <div class="input">
                     <label for="feedback">
                         <input class="feedback" placeholder="Suggest me any feedback for me" type="text">
@@ -124,14 +137,15 @@
 
     </main>
 
-    <footer>
+    <footer id="bottom_page">
 
-         <p class="foot_title">An Open Commitment by Asadul Alam</p>
-         <div class="figures">
-            <a href="https://www.facebook.com/" target="_blank" ><img class="fig" src="/assets/facebook.png" alt=""></a>
-            <a href="https://github.com/" target="_blank" ><img class="fig" src="/assets/github.png" alt=""></a>
-            <a href="https://www.linkedin.com/home/?originalSubdomain=bd" target="_blank"><img class="fig" src="/assets/linked_in.png" alt=""></a>
-         </div>
+        <p class="foot_title">An Open Commitment by Asadul Alam</p>
+        <div class="figures">
+            <a href="https://www.facebook.com/" target="_blank"><img class="fig" src="/assets/facebook.png" alt=""></a>
+            <a href="https://github.com/" target="_blank"><img class="fig" src="/assets/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/home/?originalSubdomain=bd" target="_blank"><img class="fig"
+                    src="/assets/linked_in.png" alt=""></a>
+        </div>
 
     </footer>
 </body>
