scroll down to support page using button done

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </p>
 
             <div class="button">
-                <a id="bottom_page" href="#element_target">
+                <a  href="#bottom_page">
                     <button class="btn">Contact with me</button>
                 </a>
             </div>
